--- a/.env
+++ b/.env
@@ -1,11 +1,11 @@
 # exposed ports
 STAR_PORT=11000
+STAR_HTTP_PORT=7777
 MAGNETAR_PORT=5000
 KUIPER_PORT=9001
 OORT_PORT=8000
 IAM_PORT=8002
-BLACKHOLE_PORT=50051
-BLACKHOLE_GRPC_PORT=50051
+AGENT_QUEUE_PORT=50052
 NATS_PORT=4222
 ETCD_PORT=2379
 NEO4J_BOLT_PORT=7687
