Changed route for iam-service

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -95,7 +95,7 @@ services:
   iam-service:
     build:
       context: ..
-      dockerfile: iam-service/Dockerfile
+      dockerfile: iam-service/iam-service/Dockerfile
     image: iam-service
     container_name: iam-service
     hostname: ${IAM_HOSTNAME}
