--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -108,7 +108,8 @@ services:
       - IAM_ADDRESS=:${IAM_PORT}
       - OORT_ADDRESS=${OORT_HOSTNAME}:${OORT_PORT}
       - MAGNETAR_ADDRESS=${MAGNETAR_HOSTNAME}:${MAGNETAR_PORT}
-      - NATS_ADDRESS=${NATS_HOSTNAME}:${NATS_PORT}
+      - NATS_HOSTNAME=${NATS_HOSTNAME}
+      - NATS_PORT=${NATS_PORT}
       - NEO4J_HOSTNAME=${NEO4J_HOSTNAME}
       - NEO4J_BOLT_PORT=${NEO4J_BOLT_PORT}
       - NEO4J_DBNAME=${NEO4J_DBNAME}
