--- a/.env
+++ b/.env
@@ -1,19 +1,3 @@
-# exposed ports
-STAR_PORT=11000
-STAR_HTTP_PORT=7777
-MAGNETAR_PORT=5000
-KUIPER_PORT=9001
-OORT_PORT=8000
-IAM_PORT=8002
-AGENT_QUEUE_PORT=50052
-NATS_PORT=4222
-ETCD_PORT=2379
-NEO4J_BOLT_PORT=7687
-NEO4J_HTTP_PORT=7474
-VAULT_HTTP_PORT=8200
-# postgres for blackhole
-DB_PORT=5432
-# node params
 NODES_NUM=2
-REGISTRATION_REQ_TIMEOUT_MILLISECONDS=1000
-MAX_REGISTRATION_RETRIES=5
+MAX_REGISTER_RETRY=5
+STAR_PORT=11000
