--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -58,22 +58,25 @@ services:
     image: kuiper
     container_name: kuiper
     hostname: ${KUIPER_HOSTNAME}
-    # expose:
-    #   - ${KUIPER_PORT}
-    # ports:
-    #   - ${KUIPER_PORT}:${KUIPER_PORT}
+    expose:
+      - ${KUIPER_PORT}
+    ports:
+      - ${KUIPER_PORT}:${KUIPER_PORT}
     environment:
       - KUIPER_ADDRESS=:${KUIPER_PORT}
+      - WEBHOOK_ADDRESS=:${KUIPER_WEBHOOK_PORT}
+      - WEBHOOK_URL=http://${KUIPER_HOSTNAME}:${KUIPER_WEBHOOK_PORT}
       - OORT_ADDRESS=${OORT_HOSTNAME}:${OORT_PORT}
       - MAGNETAR_ADDRESS=${MAGNETAR_HOSTNAME}:${MAGNETAR_PORT}
       - NATS_ADDRESS=${NATS_HOSTNAME}:${NATS_PORT}
       - AGENT_QUEUE_ADDRESS=${AGENT_QUEUE_HOSTNAME}:${AGENT_QUEUE_PORT}
-      - APOLLO_ADDRESS=${IAM_HOSTNAME}:${IAM_PORT}
+      - ETCD_ADDRESS=${KUIPER_ETCD_HOSTNAME}:${KUIPER_ETCD_PORT}
       - SECRET_KEY=${SECRET_KEY}
     networks:
       - network
     depends_on:
       - nats
+      - kuiper_etcd
       - agent_queue
 
   agent_queue:
@@ -209,6 +212,22 @@ services:
       - etcd_data:/bitnami/etcd
     networks:
       - network
+    
+  kuiper_etcd:
+    image: 'bitnami/etcd:latest'
+    container_name: kuiper_etcd
+    hostname: ${KUIPER_ETCD_HOSTNAME}
+    # expose:
+    #   - ${ETCD_PORT}
+    # ports:
+    #   - ${ETCD_PORT}:${ETCD_PORT}
+    environment:
+      - ALLOW_NONE_AUTHENTICATION=yes
+      - ETCD_ADVERTISE_CLIENT_URLS=http://${KUIPER_ETCD_HOSTNAME}:${KUIPER_ETCD_PORT}
+    volumes:
+      - kuiper_etcd_data:/bitnami/etcd
+    networks:
+      - network
 
   cassandra:
     build:
@@ -254,6 +273,8 @@ volumes:
   neo4jlogs:
     driver: local
   etcd_data:
+    driver: local
+  kuiper_etcd_data:
     driver: local
   cassandra_data:
     driver: local
