--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -68,6 +68,7 @@ services:
       - WEBHOOK_URL=http://${KUIPER_HOSTNAME}:${KUIPER_WEBHOOK_PORT}
       - OORT_ADDRESS=${OORT_HOSTNAME}:${OORT_PORT}
       - MAGNETAR_ADDRESS=${MAGNETAR_HOSTNAME}:${MAGNETAR_PORT}
+      - QUASAR_ADDRESS=${QUASAR_HOSTNAME}:${QUASAR_PORT}
       - NATS_ADDRESS=${NATS_HOSTNAME}:${NATS_PORT}
       - AGENT_QUEUE_ADDRESS=${AGENT_QUEUE_HOSTNAME}:${AGENT_QUEUE_PORT}
       - ETCD_ADDRESS=${KUIPER_ETCD_HOSTNAME}:${KUIPER_ETCD_PORT}
@@ -78,6 +79,23 @@ services:
       - nats
       - kuiper_etcd
       - agent_queue
+
+  quasar:
+    build:
+      context: ..
+      dockerfile: quasar/Dockerfile
+    image: quasar
+    container_name: quasar
+    hostname: ${QUASAR_HOSTNAME}
+    environment:
+      - SERVER_PORT=${QUASAR_PORT}
+      - ETCD_ADDRESS=${QUASAR_ETCD_HOSTNAME}:${QUASAR_ETCD_PORT}
+      - NATS_ADDRESS=${NATS_HOSTNAME}:${NATS_PORT}
+      - SECRET_KEY=${SECRET_KEY}
+    networks:
+      - network
+    depends_on:
+      - quasar_etcd
 
   agent_queue:
     build:
@@ -201,10 +219,6 @@ services:
     image: 'bitnami/etcd:latest'
     container_name: etcd
     hostname: ${ETCD_HOSTNAME}
-    # expose:
-    #   - ${ETCD_PORT}
-    # ports:
-    #   - ${ETCD_PORT}:${ETCD_PORT}
     environment:
       - ALLOW_NONE_AUTHENTICATION=yes
       - ETCD_ADVERTISE_CLIENT_URLS=http://${ETCD_HOSTNAME}:${ETCD_PORT}
@@ -217,15 +231,23 @@ services:
     image: 'bitnami/etcd:latest'
     container_name: kuiper_etcd
     hostname: ${KUIPER_ETCD_HOSTNAME}
-    # expose:
-    #   - ${ETCD_PORT}
-    # ports:
-    #   - ${ETCD_PORT}:${ETCD_PORT}
     environment:
       - ALLOW_NONE_AUTHENTICATION=yes
       - ETCD_ADVERTISE_CLIENT_URLS=http://${KUIPER_ETCD_HOSTNAME}:${KUIPER_ETCD_PORT}
     volumes:
       - kuiper_etcd_data:/bitnami/etcd
+    networks:
+      - network
+
+  quasar_etcd:
+    image: 'bitnami/etcd:latest'
+    container_name: quasar_etcd
+    hostname: ${QUASAR_ETCD_HOSTNAME}
+    environment:
+      - ALLOW_NONE_AUTHENTICATION=yes
+      - ETCD_ADVERTISE_CLIENT_URLS=http://${QUASAR_ETCD_HOSTNAME}:${QUASAR_ETCD_PORT}
+    volumes:
+      - quasar_etcd_data:/bitnami/etcd
     networks:
       - network
 
@@ -275,6 +297,8 @@ volumes:
   etcd_data:
     driver: local
   kuiper_etcd_data:
+    driver: local
+  quasar_etcd_data:
     driver: local
   cassandra_data:
     driver: local
