magnetar gravity integration

--- a/control_plane.env
+++ b/control_plane.env
@@ -54,6 +54,7 @@ export DBPORT_CONSUL=8500
 
 export MERIDIAN_LISTEN_PORT=8000
 export MERIDIAN_ADDRESS=meridian:8000
+export GRAVITY_ADDRESS=agent_queue:50052
 export MERIDIAN_NEO4J_ADDRESS=meridian_neo4j:7687
 export MERIDIAN_NEO4J_DB_NAME=neo4j
 export MERIDIAN_NEO4J_BOLT_PORT=7687
