add metrics-related components to start scripts

--- a/control_plane.env
+++ b/control_plane.env
@@ -63,3 +63,7 @@ export MERIDIAN_NEO4J_AUTH_ENABLED=false
 export PULSAR_ADDRESS=pulsar:8000
 export PULSAR_ETCD_ADDRESS=pulsar_etcd:2379
 export PULSAR_LISTEN_ADDRESS=0.0.0.0:8000
+
+export PROMETHEUS_HEALTHCHECK_PORT=9090
+export NATS_SUBJECT="getMetrics"
+export PROMETHEUS_HEALTCHECK_URL="prometheus_healthcheck"
