--- a/node.env
+++ b/node.env
@@ -1,18 +1,25 @@
 STAR_HOSTNAME=star
 STAR_PORT=11000
+STAR_ADDRESS=:11000
+
 NATS_HOSTNAME=10.0.2.2
 NATS_PORT=4222
-REGISTRATION_TIMEOUT=1000
-MAX_REGISTER_RETRY=3
+NATS_ADDRESS=10.0.2.2:4222
+
+REGISTRATION_REQ_TIMEOUT_MILLISECONDS=10000
+MAX_REGISTRATION_RETRIES=3
+
 NODE_ID_DIR_PATH=/etc/c12s
 NODE_ID_FILE_NAME=nodeid
-SERF_BIND_ADDRESS=0.0.0.0
-SERF_BIND_PORT=7946
-SERF_CLUSTER_ADDRESS=10.13.13.102
-SERF_CLUSTER_PORT=7946
-STAROMETRY_HTTP_PORT=8003
-STAROMETRY_GRPC_PORT=50055
-PROMETHEUS_HOSTNAME=prometheus
-PROMETHEUS_PORT=9090
-SERF_GOSSIP_TAG=tag1:type_1
-GOSSIP_NODE_NAME=star_1
+
+BIND_ADDRESS=10.13.13.102
+BIND_PORT=7946
+
+CADVISOR_PORT=8081
+CADVISOR_INTERNAL_PORT=8080
+NODE_EXPORTER_PORT=9100
+CADVISOR_URL=cadvisor
+NODE_EXPORTER_URL=node_exporter
+NODE_EXPORTER_INTERNAL_PORT=8080
+METRICS_HTTP_PORT=8003
+METRICS_GRPC_PORT=50055
