--- a/node.yml
+++ b/node.yml
@@ -1,23 +1,18 @@
 version: "3.8"
 
 services:
-  prometheus:
-    image: prom/prometheus:latest
-    volumes:
-      - ./prometheus/prometheus.yml:/etc/prometheus/prometheus.yml
+  node_exporter:
+    image: quay.io/prometheus/node-exporter:latest
+    container_name: node_exporter
     command:
-      - "--config.file=/etc/prometheus/prometheus.yml"
-    ports:
-      - 9091:9090
-    networks:
-      - network
-
-  node-exporter:
-    image: prom/node-exporter
+      - '--path.rootfs=/host'
+    network_mode: host
+    pid: host
+    restart: unless-stopped
+    volumes:
+      - '/:/host:ro,rslave'
     ports:
       - 9100:9100
-    networks:
-      - network
 
   cadvisor:
     image: gcr.io/cadvisor/cadvisor:v0.47.1
@@ -30,9 +25,26 @@ services:
       - /var/lib/docker/:/var/lib/docker:ro
       - /var/lib/dbus/machine-id:/var/lib/dbus/machine-id:ro
       - /var/run/docker.sock:/var/run/docker.sock:ro
-    networks:
-      - network
 
-networks:
-  network:
-    driver: bridge
+  starometry:
+    build:
+      context: ..
+      dockerfile: ./starometry/Dockerfile
+    image: starometry
+    container_name: starometry
+    hostname: starometry
+    restart: on-failure
+    ports:
+      - ${STAROMETRY_HTTP_PORT}:${STAROMETRY_HTTP_PORT}
+      - ${STAROMETRY_GRPC_PORT}:${STAROMETRY_GRPC_PORT}
+    environment:
+      - NODE_EXPORTER_URL=${NODE_EXPORTER_URL}
+      - NODE_EXPORTER_PORT=9100
+      - CADVISOR_URL=cadvisor
+      - CADVISOR_PORT=${CADVISOR_INTERNAL_PORT}
+      - APP_PORT=${STAROMETRY_HTTP_PORT}
+      - NATS_PORT=${NATS_PORT}
+      - NATS_URL=${NATS_HOSTNAME}
+      - GRPC_PORT=${STAROMETRY_GRPC_PORT}
+    volumes:
+      - /etc/c12s:/etc/c12s
