--- a/node.env
+++ b/node.env
@@ -15,11 +15,9 @@ NODE_ID_FILE_NAME=nodeid
 BIND_ADDRESS=10.13.13.102
 BIND_PORT=7946
 
-CADVISOR_PORT=8081
-CADVISOR_INTERNAL_PORT=8080
+CADVISOR_ADDRESS=host.docker.internal
+CADVISOR_PORT=8080
+NODE_EXPORTER_ADDRESS=host.docker.internal
 NODE_EXPORTER_PORT=9100
-CADVISOR_URL=cadvisor
-NODE_EXPORTER_URL=node_exporter
-NODE_EXPORTER_INTERNAL_PORT=8080
-METRICS_HTTP_PORT=8003
-METRICS_GRPC_PORT=50055
+STAROMETRY_HTTP_PORT=8003
+STAROMETRY_GRPC_PORT=50055
