--- a/prometheus_healthcheck/prometheus.yml
+++ b/prometheus_healthcheck/prometheus.yml
@@ -1,5 +1,6 @@
 global:
-  scrape_interval: 5s
+  scrape_interval: 1s
+  # scrape_timeout: 4s
   external_labels:
     monitor: "Monitoring"
 scrape_configs:
