single-node setup

--- a/.env
+++ b/.env
@@ -1,3 +1,92 @@
-NODES_NUM=2
-MAX_REGISTER_RETRY=5
+MAGNETAR_PORT=5000
+KUIPER_PORT=9001
+KUIPER_WEBHOOK_PORT=9002
+OORT_PORT=8000
+IAM_PORT=8002
+AGENT_QUEUE_PORT=50052
+NATS_PORT=4222
+ETCD_PORT=2379
+KUIPER_ETCD_PORT=2379
+NEO4J_BOLT_PORT=7687
+NEO4J_HTTP_PORT=7474
+VAULT_HTTP_PORT=8200
+
+MAGNETAR_HOSTNAME=magnetar
+KUIPER_HOSTNAME=kuiper
+OORT_HOSTNAME=oort
+NATS_HOSTNAME=nats
+ETCD_HOSTNAME=etcd
+KUIPER_ETCD_HOSTNAME=kuiper_etcd
+IAM_HOSTNAME=apollo
+AGENT_QUEUE_HOSTNAME=agent_queue
+
+NEO4J_HOSTNAME=neo4j
+NEO4J_AUTH_ENABLED=false
+NEO4J_DBNAME=neo4j
+NEO4J_apoc_export_file_enabled=true
+NEO4J_apoc_import_file_enabled=true
+NEO4J_apoc_import_file_use__neo4j__config=true
+NEO4J_PLUGINS="[\"apoc\"]"
+
+VAULT_HOSTNAME=vault
+VAULT_ADDR=http://0.0.0.0
+VAULT_KEYS_FILE=/etc/apollo/api_key.json
+
+CASSANDRA_DB=apollo
+CASSANDRA_HOSTNAME=cassandra
+CASSANDRA_DB_USERNAME=user
+CASSANDRA_DB_PASSWORD=apollo
+
+DB_PASSWORD=c12s_password
+DB_USERNAME=postgres
+DB_NAME=postgres
+DB_HOST=database
+
+QUASAR_HOSTNAME=quasar
+QUASAR_PORT=9090
+QUASAR_ETCD_HOSTNAME=quasar_etcd
+QUASAR_ETCD_PORT=2379
+
+SECRET_KEY="secret-key"
+
+DB_CONSUL="consul"
+DBPORT_CONSUL=8500
+
+MERIDIAN_LISTEN_PORT=8000
+MERIDIAN_ADDRESS=meridian:8000
+GRAVITY_ADDRESS=agent_queue:50052
+MERIDIAN_NEO4J_ADDRESS=meridian_neo4j:7687
+MERIDIAN_NEO4J_DB_NAME=neo4j
+MERIDIAN_NEO4J_BOLT_PORT=7687
+MERIDIAN_NEO4J_HTTP_PORT=7474
+MERIDIAN_NEO4J_AUTH_ENABLED=false
+PULSAR_ADDRESS=pulsar:8000
+PULSAR_ETCD_ADDRESS=pulsar_etcd:2379
+PULSAR_LISTEN_ADDRESS=0.0.0.0:8000
+
+PROMETHEUS_HEALTHCHECK_PORT=9090
+PROMETHEUS_HEALTCHECK_URL=prometheus_healthcheck
+
+STAR_HOSTNAME=star
 STAR_PORT=11000
+STAR_ADDRESS=:11000
+
+NATS_ADDRESS=nats:4222
+
+REGISTRATION_REQ_TIMEOUT_MILLISECONDS=10000
+MAX_REGISTRATION_RETRIES=3
+
+NODE_ID_DIR_PATH=/etc/c12s
+NODE_ID_FILE_NAME=nodeid
+
+BIND_ADDRESS=star
+BIND_PORT=7946
+
+CADVISOR_ADDRESS=cadvisor
+CADVISOR_PORT=8080
+NODE_EXPORTER_ADDRESS=node_exporter
+NODE_EXPORTER_PORT=9100
+STAROMETRY_HTTP_PORT=8003
+STAROMETRY_GRPC_PORT=50055
+
+NODES_NUM=3
