--- a/control_plane.yml
+++ b/control_plane.yml
@@ -311,6 +311,8 @@ services:
       - ${MERIDIAN_LISTEN_PORT}:${MERIDIAN_LISTEN_PORT}
     environment:
       - PULSAR_ADDRESS=${PULSAR_ADDRESS}
+      - GRAVITY_ADDRESS=${GRAVITY_ADDRESS}
+      - MAGNETAR_ADDRESS=${MAGNETAR_HOSTNAME}:${MAGNETAR_PORT}
       - NEO4J_ADDRESS=${MERIDIAN_NEO4J_ADDRESS}
       - NEO4J_DB_NAME=${MERIDIAN_NEO4J_DB_NAME}
       - LISTEN_ADDRESS=0.0.0.0:${MERIDIAN_LISTEN_PORT}
