Changed consul db name. Added server_rejoin_age_max env for consul.

--- a/.env
+++ b/.env
@@ -49,7 +49,7 @@ QUASAR_ETCD_PORT=2379
 
 SECRET_KEY="secret-key"
 
-DB_CONSUL="consul"
+DB_CONSUL=consul
 DBPORT_CONSUL=8500
 
 MERIDIAN_LISTEN_PORT=8000
