--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -284,10 +284,13 @@ services:
 
   consul:
     image: hashicorp/consul:latest
+    hostname: consul
     ports:
       - "8500:8500"
       - "8600:8600/tcp"
       - "8600:8600/udp"
+    environment:
+      - CONSUL_LOCAL_CONFIG={"server":true,"server_rejoin_age_max":"8760h"}
     command: "agent -ui -server -bind 0.0.0.0 -client 0.0.0.0 -bootstrap-expect 1"
     volumes:
       - ./heliosphere/consul:/consul/data
@@ -306,8 +309,8 @@ services:
     depends_on:
       - consul
     environment:
-      DB: ${DB_CONSUL}
-      DBPORT: ${DBPORT_CONSUL}
+      - DB_CONSUL=${DB_CONSUL}
+      - DBPORT_CONSUL=${DBPORT_CONSUL}
     networks:
       network:
         ipv4_address: 10.5.0.116
